	  the mouse with the shortcuts.  FIXME - Does not support clicking
	  on filenames in the browser, yet.
	- Changed mouse disabling code from depending on --enable-tiny
	  to its own flag, --disable mouse.  The --tiny option defines
	  this automatically, but now just mouse support can be disabled
	  if desired.
	- File Browser supports the "Goto Directory"
- configure.in:
	- New option, --enable-nanorc which currently does nothing but
	  sets a define.  Will do more later...
- files.c:
  do_browser()
	- Minor fixes to the processing of SELECT function (Rocco)
	- Added the "Goto Directory" code (Rocco)
- global.c:
	- Updated some of the lists for the "Goto Directory" code (Rocco)
- nano.c:
  main()
	- Code to silently process "-g" and "-j" (Rocco)
- nano.h:
	- Updated the BROWSER_LIST_LEN for the "Goto Directory" code (Rocco)
- proto.h:
	- New shortcut list added: gotodir_list (Rocco).

nano 1.1 tree forked here 04/07/2001

nano 1.0.1 - 04/06/2001
- General:
	- added configure option --disable-wrapping.  Does what it says,
	  no wrapping or checks are done.  Separate from --enable-tiny,
	  some may want a barebones Pico clone that does wrap text.
	  Affects configure, nano.c:do_char() and check_wrap() obviously,
	  version(), and do_char().
- aclocal.m4:
	- Minor patch for intl check (really this time) (Albert Chin)
- faq.html:
	- Fixed typo in section 6.1 (discovered by Bob Farmer).
- files.c:
	- fix two typos in comments, one in ChangeLog (Matthias Andree)
  diralphasort()
	- Stop abort on symlinks (Matthias Andree)
	- use strcasecmp to sort directory if available, pilot does that
	  as well (Matthias Andree)
  filestat(), do_browse()
	- Changed lstat calls to stat, which fixes the browser not
	  following links to directories.  We only use lstat() when
	  printing the details of the file, and if it is a link, then
	  check via lstat() for link to a directory.  If it is 
	  a directory, display (dir), else use the normal "--".
  do_browser()